--- a/templates/template.tex
+++ b/templates/template.tex
@@ -1,24 +1,3 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% コンパイルする場合は
-%   $ lualatex FILENAME.tex
-%
-%
-%
-%
-%
-%
-%
-%
-%
-%
-%
-%
-%
-%
-%
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \documentclass[a4paper]{ltjsarticle}
 
 \usepackage[top=20truemm,bottom=20truemm,left=20truemm,right=20truemm]{geometry} 
@@ -83,7 +62,7 @@
 %    urlcolor=blue,
 %}
 \title{}
-\author{1853127S 新井祐樹}
+\author{}
 \date{\Filemodtoday{\jobname}}
 
 \mathtoolsset{showonlyrefs=true}
@@ -102,9 +81,9 @@
     \vspace{150mm}
     \Large DATE \par
     \vspace{15mm}
-    \Large 1853127S　新井祐樹 \par
+    \Large NAME \par
     \vspace{10mm}
-    \Large 共同実験者　NAME
+    \Large 
     \vspace{10mm}
 \end{center}
 \thispagestyle{empty}
