--- a/templates/template.tex
+++ b/templates/template.tex
@@ -33,6 +33,7 @@
 \usepackage{wrapfig}
 \usepackage{array}
 \usepackage{multicol}
+\usepackage{enumerate}
 
 %\usepackage[pages=some]{background}
 %\pagestyle{fancy}
